<resources>
    <string name="app_name">porchlyt-services</string>
    <string name="blog">blog</string>
    <string name="search">search</string>
    <string name="jobs">jobs</string>
    <string name="describe_the_problem_you_want_repaired">Describe the problem you want repaired</string>
    <string name="location">Location</string>
    <string name="select_category">Select Category</string>


    <string name="click_to_add_job">click to add job</string>
    <string name="add_job">Add job</string>
    <string name="search_job">Search job</string>
    <string name="search_artisan">Search Artisan {fa_search}</string>
    <string name="address">Address</string>
    <string name="cannot_be_blank">Cannot be blank</string>
    <string name="select_a_job">select a job</string>
    <string name="add_location">Add Location</string>
    <string name="click_to_edit_location">click to edit location</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="already_selected">already selected</string>
    <string name="information">Information</string>
    <string name="we_need_your_location_to_provide_you_this_service">We need to know your location to provide you this service</string>
    <string name="enable_location_settings_to_enhance_your_user_experience">Enable location settings to enhance your user experience</string>
    <string name="click_to_enable_location_services">Your location services are disabled, click to enable...</string>
    <string name="long_press_to_cancel">Long press to cancel</string>
    <string name="no_jobs_selected">No jobs selected</string>
    <string name="error_occured_try_again">Error occurred try again</string>
    <string name="registration">Registration</string>
    <string name="registering_please_wait">Registering please wait...</string>
    <string name="error_occured">Error occured</string>
    <string name="confirm_5_digit_pin">Confirm 5 digit pin</string>
    <string name="please_wait">Please wait...</string>
    <string name="invalid_otp">Invalid otp</string>
    <string name="register">Register</string>
    <string name="we_need_to_verify_your_mobile_number">We need to verify your mobile number</string>
    <string name="no_artisans_were_found_for_the_following_services">No artisans were found for the following services:</string>
    <string name="notify_me_when_artisan_is_available">Notify me when artisan is available</string>
    <string name="ignore">Ignore</string>
    <string name="submit">Submit</string>
    <string name="saved">saved</string>
    <string name="artisans_found_nearby">artisan(s) found nearby</string>
    <string name="price">price</string>
    <string name="item">item</string>
    <string name="bills">bills</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="total_time">Total time: </string>
    <string name="days">days </string>
    <string name="hrs"> hrs </string>
    <string name="mins"> mins </string>
    <string name="job_details">Job details</string>
    <string name="total_price">Total price</string>
    <string name="open_dispute">Open Dispute {fa_question}</string>
    <string name="make_cash_payment">Make CashPayment {fa_money}</string>
    <string name="make_card_payment">Make CardPayment {fa_credit_card}</string>
    <string name="payment_methods">payment methods</string>
    <string name="bill_updated">bill updated</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="your_about_to_make_a_cash_payment_to">Your about to make a cash payment to </string>
    <string name="total_amount">Total amount</string>
    <string name="enable_location_settings_first">Enable location settings first</string>
    <string name="this_job_has_no_bills_yet">This job has  no bills yet</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="payment_recieved">Payment recieved</string>
    <string name="this_job_is_closed">This job is closed</string>
    <string name="over_all_rating">Over all rating</string>
    <string name="arriving_in_a_timely_manner">Arriving in a timely manner</string>
    <string name="good_reception">Good reception</string>
    <string name="did_the_job_well">Did the job well</string>
    <string name="fair_pricing">Fair pricing</string>
    <string name="rate_artisan">Rate artisan</string>
    <string name="artisan_rating">Artisan rating</string>
    <string name="reason_for_dispute">Reason for dispute</string>

    <string name="pricing_too_expensive">Pricing too expensive</string>
    <string name="job_not_done_well">Job not done well</string>
    <string name="other">other</string>

    <string name="indicate_a_reason_for_the_dispute">Indicate a reason for the dispute</string>
    <string name="you_have_opened_a_dispute_our_team_will_respond_within_24_hrs">You have opened a dispute our team will respond within 24 hrs</string>
    <string name="activity_dispute_notification">Dispute notification</string>
    <string name="open_a_dispute">Open a  dispute</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback</string>
    <string name="cancelled">CANCELLED</string>
    <string name="error">ERROR</string>
    <string name="success">SUCCESS</string>
    <string name="view_profile_picture">View profile picture</string>
    <string name="find_artisan">artisans</string>
    <string name="select_city">select city</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_do_you_need">what do you need?</string>
    <string name="find_now">find now</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="click_for_more_options">click for more options</string>
    <string name="close">close</string>
    <string name="unknown_location">Unknown location?</string>
    <string name="per_hr">/hr</string>

    <string name="why_do_you_want_to_cancel">why do you want to cancel?</string>

    <string name="took_too_long_to_arrive">took too long to arrive</string>
    <string name="bad_service">bad service</string>
    <string name="too_expensive">too expensive</string>
    <string name="this_job_was_cancelled">this job was cancelled</string>
    <string name="wrong_order">wrong order</string>
    <string name="cancel_job">Cancel job</string>
    <string name="job_cancelled">Job cancelled</string>
    <string name="channel_name">porchlyt</string>
    <string name="your_temporarily_banned_from_using_this_service_as_you_may_have_violated_our_terms_of_service">
        Your temporarily banned from using this service as you may have violated our terms of service
    </string>

    <string name="your_account_is_now_enabled">Your account is now enabled</string>
    <string name="this_job_is_under_dispute">This job is under dispute</string>


</resources>
