<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisputeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mtoolbar"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="@color/primary"
        android:elevation="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_worker"
            app:civ_border_color="#000"
            app:civ_border_width="1dp" />


        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_profile"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/reason_for_dispute"
                android:textColor="#000"
                android:textSize="30dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_background"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="20dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rd_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pricing_too_expensive" />

                <RadioButton
                    android:id="@+id/rd_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/job_not_done_well" />

                <RadioButton
                    android:id="@+id/rd_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/txt_label"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_other_reason"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:hint="@string/reason_for_dispute"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_alignParentBottom="true"
            android:onClick="execute_open_dispute"
            app:bootstrapBrand="danger"
            app:bootstrapText="@string/open_dispute"
            app:roundedCorners="true"
            app:showOutline="true" />

    </RelativeLayout>
</LinearLayout>



