<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CashPaymentActivity"
    android:layout_width="match_parent"
    android:id="@+id/linlay"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:id="@+id/mtoolbar"
        android:background="@color/primary"
        android:elevation="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            app:civ_border_color="#000"
            app:civ_border_width="1dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_worker" />


        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_profile"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/cash_payment"
                android:textColor="#000"
                android:textSize="30dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/your_about_to_make_a_cash_payment_to"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/txt_artisan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="kudzai zishumba"
                android:textColor="#000"
                android:textSize="12dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@+id/linlay1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_background"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_amount"

                />

            <TextView
                android:id="@+id/txt_total_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="N5000"

                />
        </LinearLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            app:bootstrapBrand="info"
            android:onClick="execute_make_cash_payment"
            app:bootstrapText="@string/make_cash_payment"
            app:roundedCorners="true"
            app:showOutline="true"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</LinearLayout>



