<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ViewJobActivity">

    <LinearLayout
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mtoolbar"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@color/primary"
            android:elevation="5dp"
            app:subtitleTextColor="#fff"
            app:theme="@style/ToolbarColoredBackArrow"
            app:titleTextColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:elevation="20dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <!--job detail layout -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:elevation="10dp"
                    android:minHeight="85dp"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/txt_service_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#00F"
                        android:text="Carpentry"
                        android:textColor="#fff"
                        android:textSize="10dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_client_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0773303669"
                        android:textColor="#fff"
                        android:textSize="10dp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="2dp"
                                android:capitalize="characters"
                                android:text="@string/start_time"
                                android:textColor="#fff"
                                android:textSize="10dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt_start_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:capitalize="characters"
                                android:text="11 00:am"
                                android:textColor="#fff"
                                android:textSize="10dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="2dp"
                                android:capitalize="characters"
                                android:text="@string/end_time"
                                android:textColor="#fff"
                                android:textSize="10dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt_end_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:capitalize="characters"
                                android:text="- - - -"
                                android:textColor="#fff"
                                android:textSize="10dp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">


                        <TableRow android:weightSum="1">

                            <TextView
                                android:id="@+id/txt_total_time"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:capitalize="characters"
                                android:text="Total time: 18 hrs"
                                android:textColor="#fff"
                                android:textSize="10dp"
                                android:textStyle="bold" />


                        </TableRow>


                    </TableLayout>

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <com.jackandphantom.circularimageview.CircleImage
                        android:id="@+id/img_profile"
                        android:background="@color/primary"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_worker"
                        app:add_shadow="true"
                        app:shadow_color="#000"
                        app:shadow_radius="10" />

                </RelativeLayout>

            </LinearLayout>


            <!--bills layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/bills"
                    android:textColor="#000"
                    android:textSize="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Total price: 18.00"
                    android:textColor="#000"
                    android:textSize="10dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="#000" />


                <LinearLayout
                    android:id="@+id/tbl_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="@string/item"
                        android:textSize="10dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/price"
                        android:textSize="10dp" />


                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
            </LinearLayout>

        </LinearLayout>


        <!--layout for buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_methods"
                android:textColor="#000"
                android:textSize="10dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#000" />


            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_open_dispute"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginBottom="10dp"
                android:onClick="open_dispute_activity"
                app:bootstrapBrand="danger"
                app:bootstrapText="@string/open_dispute"
                app:roundedCorners="true"
                app:showOutline="true" />


            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_cash_payment"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginBottom="10dp"
                android:onClick="openCashPaymentActivity"
                app:bootstrapBrand="info"
                app:bootstrapText="@string/make_cash_payment"
                app:roundedCorners="true"
                app:showOutline="true" />


            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_card_payment"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginBottom="10dp"
                android:onClick="open_make_card_payment"
                app:bootstrapBrand="success"
                app:bootstrapText="@string/make_card_payment"
                app:roundedCorners="true"
                app:showOutline="true" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>